--- a/QT/1.环境搭建及简介.md
+++ b/QT/1.环境搭建及简介.md
@@ -47,7 +47,7 @@
 
    下载QT SDK
 
-   ![]("./pic/下载QT SDK.png")
+   ![](./pic/下载QT%20SDK.png)
 
 2. 下载好后双击安装
 
@@ -213,7 +213,7 @@ Widget::~Widget()
 
 当直接双击 `ui` 文件，此时 `Qt Creator` 就会调用 `Qt Designer`，打开 `ui` 文件，图像化的界面编辑器
 
-![](./pic/Qt Designer.png)
+![](./pic/Qt%20Designer.png)
 
 此时再点击左侧边栏的“编辑”按钮，就会显示 `ui` 文件的本体了：
 
