--- a/QT/2.初始Qt.md
+++ b/QT/2.初始Qt.md
@@ -13,7 +13,7 @@
 
 与此同时，`widget.ui` 文件中也会随之改变：
 
-![](./pic/widget.ui 文件中也会随之改变.png)
+![](./pic/widget.ui%20文件中也会随之改变.png)
 
 然后 `qmake` 就会在编译项目的时候，基于这个内容生成一段 `C++` 代码，通过代码构建出界面。
 
