--- a/html+css+js基础/选择器.md
+++ b/html+css+js基础/选择器.md
@@ -356,7 +356,7 @@ div {
 
 ##### 2.4.2 focus 伪类选择器
 
-:focus 伪类适用于**当一个元素进入即将进行交互**的状态。例如，一个输入框获得了焦点。
+focus 伪类适用于**当一个元素进入即将进行交互**的状态。例如，一个输入框获得了焦点。
 
 当我们使用鼠标或类似鼠标设备时，:focus 伪类将在用户开始激活元素后被触发，值得注意的是，元素将保持获得焦点状态，除非用户点击其他的元素。
 
