--- a/html+css+js基础/元素显示模式.md
+++ b/html+css+js基础/元素显示模式.md
@@ -90,3 +90,28 @@ span
 - display: inline 改成行内元素
 - display: inline-block 改成行内块元素
 
+span 标签是行内元素，修改前：
+
+```html
+<span style="background-color: green;">
+    <div style="color:blueviolet">阿伟</div>
+    <div style="color: gray;">ahwei</div>
+    <div style="background-image: url(./ahwei.png); background-size: contain; width: 50px; height: 50px;"></div>
+</span>
+```
+
+![修改前](./pic/修改前.png)
+
+修改后：
+
+```html
+<span style="display: block; background-color: green;">
+    <div style="color:blueviolet">阿伟</div>
+    <div style="color: gray;">ahwei</div>
+    <div style="background-image: url(./ahwei.png); background-size: contain; width: 50px; height: 50px;"></div>
+</span>
+```
+
+![修改后](./pic/修改后.png)
+
+可以发现绿色背景被成功添加。
