--- a/html+css+js基础/常用元素属性.md
+++ b/html+css+js基础/常用元素属性.md
@@ -131,7 +131,7 @@ text-indent: 值;
 
 内容区：底线和顶线包裹的区域，即下图深灰色背景区域。
 
-![HTML四线图](./pic/HTML四线图,png)
+![HTML四线图](./pic/HTML四线图.png)
 
 而且 $\text{基线之间的距离} = \text{顶线间距离} = \text{底线间距离} = \text{中线间距离}$
 
