--- a/QT/1.环境搭建及简介.md
+++ b/QT/1.环境搭建及简介.md
@@ -2,12 +2,12 @@
 
 ## 1.`Qt` 的优点
 
-- 跨平台，⼏乎⽀持所有的平台；
-- 接⼝简单，容易上⼿，学习 `QT` 框架对学习其他框架有参考意义。
-- ⼀定程度上简化了内存回收机制（**半自动的垃圾回收，能够简化内存释放，也能够尽可能小的影响程序的运行效率**）；
-- 开发效率⾼，能够快速的构建应⽤程序。
+- 跨平台，几乎支持所有的平台；
+- 接口简单，容易上手，学习 `QT` 框架对学习其他框架有参考意义。
+- 一定程度上简化了内存回收机制（**半自动的垃圾回收，能够简化内存释放，也能够尽可能小的影响程序的运行效率**）；
+- 开发效率高，能够快速的构建应用程序。
 - 有很好的社区氛围，市场份额在缓慢上升。
-- 可以进⾏嵌⼊式开发。
+- 可以进行嵌入式开发。
 
 ## 2.环境搭建
 
