--- a/QT/2.初识 Qt.md
+++ b/QT/2.初识 Qt.md
@@ -183,17 +183,17 @@ qDebug() << "hello!";
 
 ## 4.查询文档
 
-打开帮助⽂档有三种⽅式。实际编程中使⽤哪种都可以。
+打开帮助文档有三种方式。实际编程中使用哪种都可以。
 
-1. 光标放到要查询的类名/⽅法名上，直接按 `F1`
-2. `Qt Creator` 左侧边栏中直接⽤⿏标单击 "帮助" 按钮
-3. 找到 `Qt Creator` 的安装路径，在 `bin` ⽂件夹下找到 `assistant.exe`，双击打开
+1. 光标放到要查询的类名/方法名上，直接按 `F1`
+2. `Qt Creator` 左侧边栏中直接用鼠标单击 "帮助" 按钮
+3. 找到 `Qt Creator` 的安装路径，在 `bin` 文件夹下找到 `assistant.exe`，双击打开
 
 ## 5.坐标系
 
 ![](./pic/左手系.png)
 
-对于嵌套窗⼝，其坐标是相对于⽗窗⼝来说的。
+对于嵌套窗口，其坐标是相对于父窗口来说的。
 
 `move` 函数设置位置：
 
